tests/cases_invalid/generics/fn_calls/.expected
error: could not find `Undefined` type
 --> ./cases_invalid/generics/fn_calls/main.shd:1:24
  |
1 | fn invalid_function<N: Undefined>() {
  |                        ^^^^^^^^^ undefined type
  |

error: could not find `undefined` value
 --> ./cases_invalid/generics/fn_calls/main.shd:7:17
  |
7 | const INVALID = undefined;
  |                 ^^^^^^^^^ undefined identifier
  |

error: could not find `generic_function<...>(bool)` function
  --> ./cases_invalid/generics/fn_calls/main.shd:12:5
   |
12 |     generic_function<u32, 1u>(true); // function param with invalid type
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined function
   |

error: expected 2 generic parameters, got 1 parameters
  --> ./cases_invalid/generics/fn_calls/main.shd:13:21
   |
 4 | fn generic_function<T, U: u32>(param: u32) {
   |                    ----------- info: expected generic parameters
 5 | }
...
12 |     generic_function<u32, 1u>(true); // function param with invalid type
13 |     generic_function<u32>(0u); // invalid number of generic params
   |                     ^^^^^ invalid number of generic parameters
   |

error: expected type, got constant expression
  --> ./cases_invalid/generics/fn_calls/main.shd:14:22
   |
 4 | fn generic_function<T, U: u32>(param: u32) {
   |                     - info: type is expected
 5 | }
...
13 |     generic_function<u32>(0u); // invalid number of generic params
14 |     generic_function<1u, 1u>(0u); // invalid generic type
   |                      ^^ invalid type
   |

error: expected constant expression, got type
  --> ./cases_invalid/generics/fn_calls/main.shd:15:27
   |
 4 | fn generic_function<T, U: u32>(param: u32) {
   |                        - info: constant expression is expected
 5 | }
...
14 |     generic_function<1u, 1u>(0u); // invalid generic type
15 |     generic_function<u32, u32>(0u); // invalid generic constant
   |                           ^^^ invalid constant expression
   |

error: expression with invalid type
  --> ./cases_invalid/generics/fn_calls/main.shd:16:27
   |
 4 | fn generic_function<T, U: u32>(param: u32) {
   |                           --- info: expected type `u32`
 5 | }
...
15 |     generic_function<u32, u32>(0u); // invalid generic constant
16 |     generic_function<u32, 1>(0u); // invalid generic constant type
   |                           ^ invalid type `i32`
   |

error: could not find `undefined` value
  --> ./cases_invalid/generics/fn_calls/main.shd:18:22
   |
18 |     generic_function<undefined, undefined>(0u);
   |                      ^^^^^^^^^ undefined identifier
   |

error: could not find `undefined` value
  --> ./cases_invalid/generics/fn_calls/main.shd:18:33
   |
18 |     generic_function<undefined, undefined>(0u);
   |                                 ^^^^^^^^^ undefined identifier
   |
